@@ -9,3 +9,5 @@
 - new color maps for hue/saturation/value, color map for alpha values fixed
 - QwtPlotSpectrogram::setMaxRGBTableSize added
 - QwtPlotCurve::closestPoint is virtual now
+- QwtPlotCurve: polygon clipping includes the painter clip
+- QwtPlotCurve: aggressive weeding added - a fast weeding algo for huge datasets with increasing x or y values
